--- a/Financeiro.html
+++ b/Financeiro.html
@@ -10,10 +10,13 @@
     <h1>DO WHILE (FINANCEIRO!)</h1>
     
     <button onclick="Financeiro()"><h2>Iniciar</h2></button>
-
+    <br>
+<hr>
+    <a href="index.html"><h1>COME BACK TO INDEX</h1></a>
 
 
 
 <script src="finan.js"></script>
 </body>
+
 </html>
